# myStreamOutApp

./: .gitignore  ARCHITECTURE.md  AUDIO_CODEC_LATENCY_NOTES.md  README.md  build.gradle  build_android.sh  deploystreamout.sh  env.sh  settings.gradle  sign_with_platform_key.sh  streamout-default-permissions.xml  streamout-permissions.xml
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cam2_streamout_debug.cpp  camera2_gst_streamer.cpp  csioMock.cpp  gst_element_print_properties.cpp  gstreamer_test.cpp  jniMock.cpp  streamout.cpp
app/src/main/cpp/include/: cregstplay.h  csioCommonShare.h  csioSettings.h  gst_element_print_properties.h
app/src/main/grpc/protos/: grpc_str_out.proto
app/src/main/gst/jni/: Android.mk  Application.mk
app/src/main/java/com/crestron/streamout/: BootReceiver.java  Camera2GstStreamer.java  GStreamer.java  GstreamBase.java  RuntimePermission.java  StreamOutSvcCtrl.java  StrmOutGrpcServer.java
